--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <section>
         <h2>Sobre Mim</h2>
-        <p>Sou um profissional apaixonado por tecnologia e análise de dados...</p>
+        <p>Sou um profissional apaixonado por tecnologia e análise de dados..........</p>
     </section>
 
     <section>
