--- a/index.html
+++ b/index.html
@@ -62,25 +62,31 @@
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
             </div>
             <div class="projects-list">
-                <div class="project-card AI">
-                    <h3>Neural Network Optimization</h3>
+                <div class="project-card AI" onclick="showPreview('projects/ai_project.pdf')">
+                    <h3>Statistics</h3>
                     <p>Research on optimizing neural networks with transfer learning.</p>
-                    <a href="projects/ai_project.pdf" target="_blank">View PDF</a>
                 </div>
-                <div class="project-card PowerBI">
+                <div class="project-card PowerBI" onclick="showPreview('projects/powerbi_dashboard.pdf')">
                     <h3>Business Intelligence Dashboard</h3>
                     <p>Created a financial dashboard in Power BI for performance tracking.</p>
-                    <a href="projects/powerbi_dashboard.pdf" target="_blank">View PDF</a>
                 </div>
-                <div class="project-card Other">
+                <div class="project-card Other" onclick="showPreview('projects/software_report.pdf')">
                     <h3>Software Engineering Report</h3>
                     <p>Document covering system architecture and development process.</p>
-                    <a href="projects/software_report.docx" target="_blank">Download Report</a>
                 </div>
+            </div>
+            <div class="pdf-preview" id="pdf-preview">
+                <iframe id="pdf-frame" src="" width="100%" height="500px"></iframe>
             </div>
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script>
+        function showPreview(pdfUrl) {
+            document.getElementById('pdf-frame').src = pdfUrl;
+            document.getElementById('pdf-preview').style.display = 'block';
+        }
+    </script>
+
 </body>
 </html>
