--- a/index.html
+++ b/index.html
@@ -62,17 +62,9 @@
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
             </div>
             <div class="projects-list">
-                <div class="project-card AI" onclick="showPreview('projects/ai_project.pdf')">
+                <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
                     <h3>Statistics</h3>
                     <p>Research on optimizing neural networks with transfer learning.</p>
-                </div>
-                <div class="project-card PowerBI" onclick="showPreview('projects/powerbi_dashboard.pdf')">
-                    <h3>Business Intelligence Dashboard</h3>
-                    <p>Created a financial dashboard in Power BI for performance tracking.</p>
-                </div>
-                <div class="project-card Other" onclick="showPreview('projects/software_report.pdf')">
-                    <h3>Software Engineering Report</h3>
-                    <p>Document covering system architecture and development process.</p>
                 </div>
             </div>
             <div class="pdf-preview" id="pdf-preview">
