--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
             <h2>Academic Projects</h2>
             <div class="projects-categories">
                 <button class="filter-btn" onclick="filterProjects('all')">All</button>
-                <button class="filter-btn" onclick="filterProjects('AI')">Artificial Intelligence</button>
+                <button class="filter-btn" onclick="filterProjects('AI')">Statistics</button>
+                    <div class="projects-list">
+                        <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
+                            <h3>Statistics</h3>
+                            <p>Research on optimizing neural networks with transfer learning.</p>
+                        </div>
+                    </div>
                 <button class="filter-btn" onclick="filterProjects('PowerBI')">Power BI</button>
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
             </div>
