--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
     <section id="about">
         <div class="container about-container">
-            <img src="your-image.jpg" alt="My Photo">
+            <img src="sky.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hi! I am [Your Name], a Computer Engineering student with a strong background in Artificial Intelligence, Machine Learning, and Data Analysis...</p>
+                <p>Hi! I am Oleksandra, a Computer Engineering student with a strong background in Artificial Intelligence, Machine Learning, and Data Analysis...</p>
             </div>
         </div>
     </section>
 
     <section id="academic">
-        <div class="container">
+        <div class="container"> 
             <h2>Academic Background</h2>
             <p>I have studied Computer Engineering, Business Management, and Data Science, with expertise in AI, Power BI, and Software Engineering...</p>
         </div>
