--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <button class="filter-btn" onclick="filterProjects('AI')">Statistics</button>
                     <div class="projects-list">
                         <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
-                            <h3>Statistics</h3>
+                            <h3>Quantitative Methods in Cryptocurrencies</h3>
                             <p>Research on optimizing neural networks with transfer learning.</p>
                         </div>
                     </div>
