--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
                         </div>
                     </div>
                 <button class="filter-btn" onclick="filterProjects('PowerBI')">Power BI</button>
+                    <div class="projects-list">
+                        <div class="project-card AI" onclick="showPreview('files/SI_TP.pbix')">
+                            <h3>DataWare</h3>
+                            <p>Research on optimizing neural networks with transfer learning.</p>
+                        </div>
+                    </div>
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
             </div>
             <div class="projects-list">
