--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="projects-list">
                         <div class="project-card AI" onclick="showPreview('files/SI_TP.pbix')">
                             <h3>DataWare</h3>
-                            <p>Research on optimizing neural networks with transfer learning.</p>
+                            <p>Research on.</p>
                         </div>
                     </div>
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
