--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </nav>
     </header>
 
-    <section id="about">
+    <section id="about" class="active">
         <div class="container about-container">
-            <img src="sky.jpg" alt="My Photo">
+            <img src="images/sky.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
                 <p>Hi! I am Oleksandra, a Computer Engineering student with a strong background in Artificial Intelligence, Machine Learning, and Data Analysis...</p>
@@ -58,39 +58,27 @@
             <div class="projects-categories">
                 <button class="filter-btn" onclick="filterProjects('all')">All</button>
                 <button class="filter-btn" onclick="filterProjects('AI')">Statistics</button>
-                    <div class="projects-list">
-                        <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
-                            <h3>Quantitative Methods in Cryptocurrencies</h3>
-                            <p>Research on optimizing neural networks with transfer learning.</p>
-                        </div>
-                    </div>
                 <button class="filter-btn" onclick="filterProjects('PowerBI')">Power BI</button>
-                    <div class="projects-list">
-                        <div class="project-card AI" onclick="showPreview('files/SI_TP.pbix')">
-                            <h3>DataWare</h3>
-                            <p>Research on.</p>
-                        </div>
-                    </div>
                 <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
             </div>
+
             <div class="projects-list">
                 <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
-                    <h3>Statistics</h3>
+                    <h3>Quantitative Methods in Cryptocurrencies</h3>
                     <p>Research on optimizing neural networks with transfer learning.</p>
                 </div>
+
+                <div class="project-card PowerBI" onclick="showPreview('files/SI_TP.pbix')">
+                    <h3>DataWare</h3>
+                    <p>Research on data warehousing techniques.</p>
+                </div>
             </div>
-            <div class="pdf-preview" id="pdf-preview">
-                <iframe id="pdf-frame" src="" width="100%" height="500px"></iframe>
+
+            <div class="file-preview" id="file-preview">
+                <iframe id="file-frame" src="" width="100%" height="500px"></iframe>
             </div>
         </div>
     </section>
-
-    <script>
-        function showPreview(pdfUrl) {
-            document.getElementById('pdf-frame').src = pdfUrl;
-            document.getElementById('pdf-preview').style.display = 'block';
-        }
-    </script>
 
 </body>
 </html>
