--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="about" class="active">
         <div class="container about-container">
-            <img src="images/sky.jpg" alt="My Photo">
+            <img src="images/About me.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
                 <p>Hi! I am Oleksandra, a Computer Engineering student with a strong background in Artificial Intelligence, Machine Learning, and Data Analysis...</p>
