--- a/index.html
+++ b/index.html
@@ -31,12 +31,41 @@
         </div>
     </section>
 
-    <section id="academic">
-        <div class="container"> 
-            <h2>Academic Background</h2>
-            <p>I have studied Computer Engineering, Business Management, and Data Science, with expertise in AI, Power BI, and Software Engineering...</p>
+<section id="academic">
+    <div class="container"> 
+        <h2>Academic Background</h2>
+        <div class="education">
+            <div class="degree">
+                <h3>Computer Engineering</h3>
+                <p><strong>Institution:</strong> Instituto Superior de Engenharia de Coimbra (ISEC)</p>
+                <p><strong>Grade:</strong> 18/20</p>
+                <p><strong>Period:</strong> 2022 - Present</p>
+            </div>
+
+            <div class="degree">
+                <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                <p><strong>Institution:</strong> Instituto Superior de Contabilidade e Administração de Coimbra (ISCAC)</p>
+                <p><strong>Grade:</strong> 17/20</p>
+                <p><strong>Period:</strong> 2020 - 2022</p>
+            </div>
+
+            <div class="degree">
+                <h3>Business Management</h3>
+                <p><strong>Institution:</strong> Instituto Superior de Contabilidade e Administração de Coimbra (ISCAC)</p>
+                <p><strong>Grade:</strong> 16/20</p>
+                <p><strong>Period:</strong> 2017 - 2020</p>
+            </div>
+
+            <div class="degree">
+                <h3>Accounting and Auditing</h3>
+                <p><strong>Institution:</strong> Instituto Superior de Contabilidade e Administração de Coimbra (ISCAC)</p>
+                <p><strong>Grade:</strong> 15/20</p>
+                <p><strong>Period:</strong> 2014 - 2017</p>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section id="interests">
         <div class="container">
