--- a/index.html
+++ b/index.html
@@ -34,38 +34,45 @@
 <section id="academic">
     <div class="container"> 
         <h2>Academic Background</h2>
-        <div class="education-grid">
-            <div class="degree-card">
-                <h3>Computer Engineering</h3>
-                <p><strong>Institution:</strong> ISEC</p>
-                <p><strong>Grade:</strong> 18/20</p>
-                <p><strong>Period:</strong> 2022 - Present</p>
+        <div class="timeline">
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Computer Engineering</h3>
+                    <p><strong>Institution:</strong> ISEC</p>
+                    <p><strong>Grade:</strong> 18/20</p>
+                    <p><strong>Period:</strong> 2022 - Present</p>
+                </div>
             </div>
 
-            <div class="degree-card">
-                <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                <p><strong>Institution:</strong> ISCAC</p>
-                <p><strong>Grade:</strong> 17/20</p>
-                <p><strong>Period:</strong> 2020 - 2022</p>
+            <div class="timeline-item right">
+                <div class="timeline-content">
+                    <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                    <p><strong>Institution:</strong> ISCAC</p>
+                    <p><strong>Grade:</strong> 17/20</p>
+                    <p><strong>Period:</strong> 2020 - 2022</p>
+                </div>
             </div>
 
-            <div class="degree-card">
-                <h3>Business Management</h3>
-                <p><strong>Institution:</strong> ISCAC</p>
-                <p><strong>Grade:</strong> 16/20</p>
-                <p><strong>Period:</strong> 2017 - 2020</p>
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Business Management</h3>
+                    <p><strong>Institution:</strong> ISCAC</p>
+                    <p><strong>Grade:</strong> 16/20</p>
+                    <p><strong>Period:</strong> 2017 - 2020</p>
+                </div>
             </div>
 
-            <div class="degree-card">
-                <h3>Accounting and Auditing</h3>
-                <p><strong>Institution:</strong> ISCAC</p>
-                <p><strong>Grade:</strong> 15/20</p>
-                <p><strong>Period:</strong> 2014 - 2017</p>
+            <div class="timeline-item right">
+                <div class="timeline-content">
+                    <h3>Accounting and Auditing</h3>
+                    <p><strong>Institution:</strong> ISCAC</p>
+                    <p><strong>Grade:</strong> 15/20</p>
+                    <p><strong>Period:</strong> 2014 - 2017</p>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
 
 
     <section id="interests">
