--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
 <section id="academic">
-    <div class="container"> 
+    <div class="container">
         <h2>Academic Background</h2>
         <div class="timeline">
             <div class="timeline-item">
@@ -44,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="timeline-item right">
+            <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
                     <p><strong>Institution:</strong> ISCAC</p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="timeline-item right">
+            <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>Accounting and Auditing</h3>
                     <p><strong>Institution:</strong> ISCAC</p>
@@ -73,6 +73,7 @@
         </div>
     </div>
 </section>
+
 
 
     <section id="interests">
