--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="timeline">
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Computer Engineering</h3>
-                    <p><strong>Institution:</strong> ISEC</p>
-                    <p><strong>Grade:</strong> 18/20</p>
+                    <h3>Bachelor's in Informatics Engineering</h3>
+                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Institute of Engineering of Coimbra (ISEC)</p>
+                    <p><strong>Grade:</strong> 13/20</p>
                     <p><strong>Period:</strong> 2022 - Present</p>
                 </div>
             </div>
@@ -47,27 +47,27 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
-                    <p><strong>Grade:</strong> 17/20</p>
-                    <p><strong>Period:</strong> 2020 - 2022</p>
-                </div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-content">
-                    <h3>Business Management</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
+                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
                     <p><strong>Grade:</strong> 16/20</p>
-                    <p><strong>Period:</strong> 2017 - 2020</p>
+                    <p><strong>Period:</strong> 2021 - 2023</p>
                 </div>
             </div>
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Accounting and Auditing</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
-                    <p><strong>Grade:</strong> 15/20</p>
-                    <p><strong>Period:</strong> 2014 - 2017</p>
+                    <h3>Bachelor's in Business Management</h3>
+                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
+                    <p><strong>Grade:</strong> 12/20</p>
+                    <p><strong>Period:</strong> 2020 - 2023</p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Bachelor's in Accounting and Auditing</h3>
+                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
+                    <p><strong>Grade:</strong> 12/20</p>
+                    <p><strong>Period:</strong> 2017 - 2021</p>
                 </div>
             </div>
         </div>
