--- a/index.html
+++ b/index.html
@@ -35,45 +35,55 @@
     <div class="container">
         <h2>Academic Background</h2>
         <div class="timeline">
-            <div class="timeline-item">
-                <div class="timeline-content">
+
+            <!-- Ano de referência na barra central -->
+            <div class="timeline-year" style="top: 5%;">2023</div>
+            <div class="timeline-year" style="top: 35%;">2020</div>
+            <div class="timeline-year" style="top: 65%;">2017</div>
+
+            <!-- Curso 1 -->
+            <div class="timeline-item" style="top: 5%;">
+                <div class="timeline-content long-course">
                     <h3>Bachelor's in Informatics Engineering</h3>
-                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Institute of Engineering of Coimbra (ISEC)</p>
+                    <p><strong>Institution:</strong> ISEC</p>
                     <p><strong>Grade:</strong> 13/20</p>
                     <p><strong>Period:</strong> 2022 - Present</p>
                 </div>
             </div>
 
-            <div class="timeline-item">
-                <div class="timeline-content">
-                    <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
-                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
+            <!-- Curso 2 -->
+            <div class="timeline-item" style="top: 35%;">
+                <div class="timeline-content medium-course">
+                    <h3>Master’s in Data Analysis</h3>
+                    <p><strong>Institution:</strong> ISCAC</p>
                     <p><strong>Grade:</strong> 16/20</p>
                     <p><strong>Period:</strong> 2021 - 2023</p>
                 </div>
             </div>
 
-            <div class="timeline-item">
-                <div class="timeline-content">
+            <!-- Curso 3 -->
+            <div class="timeline-item" style="top: 50%;">
+                <div class="timeline-content medium-course">
                     <h3>Bachelor's in Business Management</h3>
-                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
+                    <p><strong>Institution:</strong> ISCAC</p>
                     <p><strong>Grade:</strong> 12/20</p>
                     <p><strong>Period:</strong> 2020 - 2023</p>
                 </div>
             </div>
 
-            <div class="timeline-item">
-                <div class="timeline-content">
+            <!-- Curso 4 -->
+            <div class="timeline-item" style="top: 65%;">
+                <div class="timeline-content long-course">
                     <h3>Bachelor's in Accounting and Auditing</h3>
-                    <p><strong>Institution:</strong> Polytechnic University of Coimbra - Coimbra Business School (ISCAC)</p>
+                    <p><strong>Institution:</strong> ISCAC</p>
                     <p><strong>Grade:</strong> 12/20</p>
                     <p><strong>Period:</strong> 2017 - 2021</p>
                 </div>
             </div>
+
         </div>
     </div>
 </section>
-
 
 
     <section id="interests">
