--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <h2>Academic Background</h2>
         <div class="timeline">
 
-            <!-- Ano de referência na barra central -->
+            <!-- Barra central com anos -->
             <div class="timeline-year" style="top: 5%;">2022</div>
             <div class="timeline-year" style="top: 30%;">2021</div>
             <div class="timeline-year" style="top: 55%;">2020</div>
             <div class="timeline-year" style="top: 80%;">2017</div>
 
-            <!-- Curso 1 -->
-            <div class="timeline-item" style="top: 5%;">
-                <div class="timeline-content long-course">
+            <!-- Curso 1 (2022 - Presente = 2 anos) -->
+            <div class="timeline-item" style="top: 5%; height: 20%;">
+                <div class="timeline-content short-course">
                     <h3>Bachelor's in Informatics Engineering</h3>
                     <p><strong>Institution:</strong> ISEC</p>
                     <p><strong>Grade:</strong> 13/20</p>
@@ -52,9 +52,9 @@
                 </div>
             </div>
 
-            <!-- Curso 2 -->
-            <div class="timeline-item" style="top: 30%;">
-                <div class="timeline-content medium-course">
+            <!-- Curso 2 (2021 - 2023 = 2 anos) -->
+            <div class="timeline-item" style="top: 30%; height: 20%;">
+                <div class="timeline-content short-course">
                     <h3>Master’s in Data Analysis</h3>
                     <p><strong>Institution:</strong> ISCAC</p>
                     <p><strong>Grade:</strong> 16/20</p>
@@ -62,8 +62,8 @@
                 </div>
             </div>
 
-            <!-- Curso 3 -->
-            <div class="timeline-item" style="top: 55%;">
+            <!-- Curso 3 (2020 - 2023 = 3 anos) -->
+            <div class="timeline-item" style="top: 55%; height: 25%;">
                 <div class="timeline-content medium-course">
                     <h3>Bachelor's in Business Management</h3>
                     <p><strong>Institution:</strong> ISCAC</p>
@@ -72,8 +72,8 @@
                 </div>
             </div>
 
-            <!-- Curso 4 -->
-            <div class="timeline-item" style="top: 80%;">
+            <!-- Curso 4 (2017 - 2021 = 4 anos) -->
+            <div class="timeline-item" style="top: 80%; height: 30%;">
                 <div class="timeline-content long-course">
                     <h3>Bachelor's in Accounting and Auditing</h3>
                     <p><strong>Institution:</strong> ISCAC</p>
@@ -85,6 +85,7 @@
         </div>
     </div>
 </section>
+
 
 
 
