--- a/index.html
+++ b/index.html
@@ -32,60 +32,59 @@
     </section>
 
 <section id="academic">
-    <div class="container">
-        <h2>Academic Background</h2>
-        <div class="timeline">
+        <div class="container">
+            <h2>Academic Background</h2>
+            <div class="timeline">
+                <div class="timeline-item left">
+                    <div class="content">
+                        <h3>Bachelor's in Accounting and Auditing</h3>
+                        <span class="year">2017</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 12/20</p>
+                            <p><strong>Period:</strong> 2017 - 2021</p>
+                        </div>
+                    </div>
+                </div>
 
-            <!-- Barra central com anos -->
-            <div class="timeline-year" style="top: 0%;">2022</div>
-            <div class="timeline-year" style="top: 25%;">2021</div>
-            <div class="timeline-year" style="top: 50%;">2020</div>
-            <div class="timeline-year" style="top: 75%;">2017</div>
+                <div class="timeline-item right">
+                    <div class="content">
+                        <h3>Bachelor's in Business Management</h3>
+                        <span class="year">2020</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 12/20</p>
+                            <p><strong>Period:</strong> 2020 - 2023</p>
+                        </div>
+                    </div>
+                </div>
 
-            <!-- Curso 1: (2022 - Presente) -->
-            <div class="timeline-item" style="top: 0%; height: 25%;">
-                <div class="timeline-content">
-                    <h3>Bachelor's in Informatics Engineering</h3>
-                    <p><strong>Institution:</strong> ISEC</p>
-                    <p><strong>Grade:</strong> 13/20</p>
-                    <p><strong>Period:</strong> 2022 - Present</p>
+                <div class="timeline-item left">
+                    <div class="content">
+                        <h3>Master’s in Data Analysis and Decision Supporting Systems</h3>
+                        <span class="year">2021</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Coimbra Business School (ISCAC)</p>
+                            <p><strong>Grade:</strong> 16/20</p>
+                            <p><strong>Period:</strong> 2021 - 2023</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="timeline-item right">
+                    <div class="content">
+                        <h3>Bachelor's in Informatics Engineering</h3>
+                        <span class="year">2022</span>
+                        <div class="info">
+                            <p><strong>Institution:</strong> Institute of Engineering of Coimbra (ISEC)</p>
+                            <p><strong>Grade:</strong> 13/20</p>
+                            <p><strong>Period:</strong> 2022 - Present</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <!-- Curso 2: (2021 - 2023) -->
-            <div class="timeline-item" style="top: 25%; height: 25%;">
-                <div class="timeline-content">
-                    <h3>Master’s in Data Analysis</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
-                    <p><strong>Grade:</strong> 16/20</p>
-                    <p><strong>Period:</strong> 2021 - 2023</p>
-                </div>
-            </div>
-
-            <!-- Curso 3: (2020 - 2023) -->
-            <div class="timeline-item" style="top: 50%; height: 25%;">
-                <div class="timeline-content">
-                    <h3>Bachelor's in Business Management</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
-                    <p><strong>Grade:</strong> 12/20</p>
-                    <p><strong>Period:</strong> 2020 - 2023</p>
-                </div>
-            </div>
-
-            <!-- Curso 4: (2017 - 2021) -->
-            <div class="timeline-item" style="top: 75%; height: 25%;">
-                <div class="timeline-content">
-                    <h3>Bachelor's in Accounting and Auditing</h3>
-                    <p><strong>Institution:</strong> ISCAC</p>
-                    <p><strong>Grade:</strong> 12/20</p>
-                    <p><strong>Period:</strong> 2017 - 2021</p>
-                </div>
-            </div>
-
         </div>
-    </div>
-</section>
-
+    </section>
 
 
 
