--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#academic">Academic Background</a></li>
+                <li><a href="#projects">Academic Projects</a></li>
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
-                <li><a href="#projects">Academic Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +26,10 @@
             <img src="images/About me.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Hi! I am Oleksandra, a Computer Engineering student with a strong background in Artificial Intelligence, Machine Learning, and Data Analysis...</p>
+                <p>I am a highly motivated Computer Engineering student at ISEC with a strong background in Data Analysis, Artificial Intelligence, and Software Development. Holding previous degrees in Accounting and Auditing, Business Management, and a Master’s in Data Analysis and Decision Supporting Systems, I bring a unique blend of technical expertise and business acumen.
+                    My key interests lie in Artificial Intelligence, Machine Learning, Business Intelligence (BI), and Database Architecture, with practical experience in Python, R, Java, SQL (Oracle & SQL Server), Power BI, .NET, OutSystems, and web development (HTML/CSS). I have developed dashboards, predictive models, and software solutions that bridge data-driven insights with strategic decision-making.
+                    Currently, I am seeking an internship or an entry-level position in IT, preferably in AI, Data Science, or Software Engineering, with availability starting in January. I am also planning to participate in an Erasmus program in Computer Engineering and later pursue job opportunities that maximize my employability in the industry.
+                    Passionate about innovation and problem-solving, I am eager to contribute to impactful projects that combine technology and data to drive efficiency and intelligence in businesses. I am open to relocation and excited to collaborate in dynamic, international environments.</p>
             </div>
         </div>
     </section>
