--- a/index.html
+++ b/index.html
@@ -99,12 +99,31 @@
         </div>
     </section>
 
-    <section id="hobbies">
-        <div class="container">
-            <h2>Hobbies</h2>
-            <p>In my free time, I enjoy reading, playing chess, hiking, and experimenting with new AI models...</p>
+<section id="hobbies">
+    <div class="container">
+        <h2>Hobbies</h2>
+        <p>I am passionate about photography. Here are some of my shots!</p>
+        <div class="photo-gallery">
+            <div class="photo">
+                <img src="images/photo1.jpg" alt="Sunset over the mountains">
+                <div class="photo-description">Sunset over the mountains</div>
+            </div>
+            <div class="photo">
+                <img src="images/photo2.jpg" alt="City lights at night">
+                <div class="photo-description">City lights at night</div>
+            </div>
+            <div class="photo">
+                <img src="images/photo3.jpg" alt="Forest path in autumn">
+                <div class="photo-description">Forest path in autumn</div>
+            </div>
+            <div class="photo">
+                <img src="images/photo4.jpg" alt="Ocean waves crashing">
+                <div class="photo-description">Ocean waves crashing</div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <section id="projects">
     <div class="container">
