--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
         <p>I am passionate about photography. Here are some of my shots!</p>
         <div class="photo-gallery">
             <div class="photo">
-                <img src="images/photo1.jpg" alt="Sunset over the mountains">
+                <img src="images/av.jpg" alt="Sunset over the mountains">
                 <div class="photo-description">Sunset over the mountains</div>
             </div>
             <div class="photo">
-                <img src="images/photo2.jpg" alt="City lights at night">
+                <img src="images/bb.jpg" alt="City lights at night">
                 <div class="photo-description">City lights at night</div>
             </div>
             <div class="photo">
-                <img src="images/photo3.jpg" alt="Forest path in autumn">
+                <img src="images/fg1.jpg" alt="Forest path in autumn">
                 <div class="photo-description">Forest path in autumn</div>
             </div>
             <div class="photo">
-                <img src="images/photo4.jpg" alt="Ocean waves crashing">
+                <img src="images/lisboa.jpg" alt="Ocean waves crashing">
                 <div class="photo-description">Ocean waves crashing</div>
             </div>
         </div>
