--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
             </div>
             <div class="photo">
                 <img src="images/fg1.jpg" alt="Forest path in autumn">
-                <div class="photo-description">Forest path in autumn</div>
+                <div class="photo-description">Figueira da Foz, Portugal 2018</div>
             </div>
             <div class="photo">
-                <img src="images/lisboa.jpg" alt="Ocean waves crashing">
+                <img src="images/lisboa1.jpg" alt="Ocean waves crashing">
                 <div class="photo-description">Ocean waves crashing</div>
             </div>
         </div>
