--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                 <img src="images/lisboa1.jpg" alt="Ocean waves crashing">
                 <div class="photo-description">Ocean waves crashing</div>
             </div>
+            <div class="photo">
+                <img src="images/coimbra1.jpg" alt="Ocean waves crashing">
+                <div class="photo-description">Coimbra, Portugal 2022</div>
+            </div>
         </div>
     </div>
 </section>
