--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
+    <title>Oleksandra Kukharska - CV</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#academic">Academic Background</a></li>
-                <li><a href="#projects">Academic Projects</a></li>
+                <li><a href="#academic">Education</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
             </ul>
@@ -26,10 +26,14 @@
             <img src="images/About me.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>I am a highly motivated Computer Engineering student at ISEC with a strong background in Data Analysis, Artificial Intelligence, and Software Development. Holding previous degrees in Accounting and Auditing, Business Management, and a Master’s in Data Analysis and Decision Supporting Systems, I bring a unique blend of technical expertise and business acumen.
-                    My key interests lie in Artificial Intelligence, Machine Learning, Business Intelligence (BI), and Database Architecture, with practical experience in Python, R, Java, SQL (Oracle & SQL Server), Power BI, .NET, OutSystems, and web development (HTML/CSS). I have developed dashboards, predictive models, and software solutions that bridge data-driven insights with strategic decision-making.
-                    Currently, I am seeking an internship or an entry-level position in IT, preferably in AI, Data Science, or Software Engineering, with availability starting in January. I am also planning to participate in an Erasmus program in Computer Engineering and later pursue job opportunities that maximize my employability in the industry.
-                    Passionate about innovation and problem-solving, I am eager to contribute to impactful projects that combine technology and data to drive efficiency and intelligence in businesses. I am open to relocation and excited to collaborate in dynamic, international environments.</p>
+                <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began.
+                    I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology.
+                    At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br>
+                    During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing.
+                    While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management.
+                    For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
+                    After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br>
+                    On this webpage, you can explore some of my projects, interests, and hobbies.</p>
             </div>
         </div>
     </section>
