--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <h2>About Me</h2>
                 <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began.
                     I started designing HTML/CSS layouts for platforms like Hi5 and Tumblr, unknowingly taking my first steps into the world of technology.
-                    At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br>
+                    At the time, I wasn’t sure how to further develop this interest, so I stepped away from it for a while. However, the curiosity never really faded.<br><br>
                     During my college application process, I wasn’t entirely sure which path to pursue, so I decided to go with a Bachelor's in Accounting and Auditing.
                     While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management.
                     For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
-                    After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br>
+                    After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
                     On this webpage, you can explore some of my projects, interests, and hobbies.</p>
             </div>
         </div>
@@ -40,7 +40,7 @@
 
 <section id="academic">
         <div class="container">
-            <h2>Academic Background</h2>
+            <h2>Education</h2>
             <div class="timeline">
                 <div class="timeline-item left">
                     <div class="content">
@@ -83,8 +83,8 @@
                         <h3>Bachelor's in Informatics Engineering</h3>
                         <span class="year">2022</span>
                         <div class="info">
-                            <p><strong>Institution:</strong> Institute of Engineering of Coimbra (ISEC)</p>
-                            <p><strong>Grade:</strong> 13/20</p>
+                            <p><strong>Institution:</strong> Coimbra Institute of Engineering (ISEC)</p>
+                            <p><strong>Grade:</strong> Currently in progress</p>
                             <p><strong>Period:</strong> 2022 - Present</p>
                         </div>
                     </div>
@@ -92,9 +92,6 @@
             </div>
         </div>
     </section>
-
-
-
 
     <section id="interests">
         <div class="container">
@@ -109,23 +106,27 @@
         <p>I am passionate about photography. Here are some of my shots!</p>
         <div class="photo-gallery">
             <div class="photo">
-                <img src="images/av.jpg" alt="Sunset over the mountains">
-                <div class="photo-description">Sunset over the mountains</div>
+                <img src="images/aveiro.jpg" alt="Aveiro, Portugal">
+                <div class="photo-description">Aveiro, Portugal</div>
             </div>
             <div class="photo">
-                <img src="images/bb.jpg" alt="City lights at night">
-                <div class="photo-description">City lights at night</div>
+                <img src="images/butterfly.jpg" alt="Butterfly">
+                <div class="photo-description">Butterfly</div>
             </div>
             <div class="photo">
-                <img src="images/fg1.jpg" alt="Forest path in autumn">
+                <img src="images/figueiradafoz1.jpg" alt="Figueira da Foz, Portugal 2018">
                 <div class="photo-description">Figueira da Foz, Portugal 2018</div>
             </div>
             <div class="photo">
-                <img src="images/lisboa1.jpg" alt="Ocean waves crashing">
-                <div class="photo-description">Ocean waves crashing</div>
+                <img src="images/figueiradafoz2.jpg" alt="Figueira da Foz, Portugal 2018">
+                <div class="photo-description">Figueira da Foz, Portugal 2018</div>
             </div>
             <div class="photo">
-                <img src="images/coimbra1.jpg" alt="Ocean waves crashing">
+                <img src="images/lisboa1.jpg" alt="Terreiro do Paço, Lisboa, Portugal 2023">
+                <div class="photo-description">Terreiro do Paço, Lisboa, Portugal 2023</div>
+            </div>
+            <div class="photo">
+                <img src="images/coimbra1.jpg" alt="Coimbra, Portugal 2022">
                 <div class="photo-description">Coimbra, Portugal 2022</div>
             </div>
         </div>
