--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="about" class="active">
         <div class="container about-container">
-            <img src="images/About me.jpg" alt="My Photo">
+            <img src="images/Aboutme.jpg" alt="My Photo">
             <div class="about-text">
                 <h2>About Me</h2>
                 <p>I was born in Ukraine and moved to Portugal at the age of six. When I was around eleven, I got my first computer — and that’s where it all began.
@@ -133,10 +133,9 @@
     </div>
 </section>
 
-
     <section id="projects">
     <div class="container">
-        <h2>Academic Projects</h2>
+        <h2>Projects</h2>
         <div class="projects-categories">
             <button class="filter-btn" onclick="filterProjects('all')">All</button>
             <button class="filter-btn" onclick="filterProjects('AI')">Statistics</button>
