--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>I am passionate about photography. Here are some of my shots!</p>
         <div class="photo-gallery">
             <div class="photo">
-                <img src="images/aveiro.jpg" alt="Aveiro, Portugal">
+                <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
                 <div class="photo-description">Aveiro, Portugal</div>
             </div>
             <div class="photo">
