--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
     <header>
+        <div class="top-bar">
+              Welcome to Our Website!
+        </div>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
