--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="top-bar">
-              Welcome to Our Website!
+              Oleksandra Kukharska - CV
         </div>
         <nav>
             <ul>
