--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#interests">Interests</a></li>
                 <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
+    <section id="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Email: aleksandra_kw@hotmail.com</p>
+        </div>
+    </section>
+    
     <section id="about" class="active">
         <div class="container about-container">
             <img src="images/Aboutme.jpg" alt="My Photo">
@@ -36,7 +44,8 @@
                     While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management.
                     For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
                     After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
-                    On this webpage, you can explore some of my projects, interests, and hobbies.</p>
+                    On this webpage, you can explore some of my projects, interests, and hobbies.    
+                </p>
             </div>
         </div>
     </section>
